fixed z-index of cd-panel

--- a/css/panelstyle.css
+++ b/css/panelstyle.css
@@ -40,6 +40,7 @@ html, body {
 
 .cd-panel {
   position: fixed;
+  z-index: 99;
   top: 0;
   left: 0;
   height: 100%;
